Issue #36: Additional fixes for light and dark mode accessibility.

--- a/web/themes/jeffgeerling/css/blog.css
+++ b/web/themes/jeffgeerling/css/blog.css
@@ -10,7 +10,7 @@
 }
 
 /* Blog images */
-.node-blog-post .insert-image {
+.node--type-blog-post .insert-image {
   margin: 0 auto;
   display: block;
 }
@@ -131,7 +131,7 @@
 .comment__submitted,
 .comment .links {
   font-size: .85em;
-  color: #aaa;
+  color: #777;
   margin-top: .5em;
 }
 
@@ -140,12 +140,12 @@
 .node__submitted a:visited
 .comment__submitted a:visited {
   text-decoration: none;
-  color: #ccc;
+  color: #444;
 }
 
 .comment .links a,
 .comment .links a:visited {
-  color: #ccc;
+  color: #444;
   text-transform: lowercase;
 }
 
